--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-grid-dnd",
-  "version": "2.1.2",
+  "name": "@tristan/react-grid-dnd-2",
+  "version": "1.0.0",
   "description": "grid style drag and drop for react",
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "typings": "esm/index.d.ts",
-  "author": "Ben McMahen",
+  "author": "Tristan Jeruta",
   "license": "MIT",
   "private": false,
   "keywords": [
@@ -24,13 +24,13 @@
     "build": "yarn run build-esm && yarn run build-other",
     "prepublishOnly": "yarn run build"
   },
-  "homepage": "https://github.com/bmcmahen/react-grid-dnd",
+  "homepage": "https://github.com/jtjeruta/react-grid-dnd",
   "bugs": {
-    "url": "https://github.com/bmcmahen/react-grid-dnd/issues"
+    "url": "https://github.com/jtjeruta/react-grid-dnd/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bmcmahen/react-grid-dnd.git"
+    "url": "https://github.com/jtjeruta/react-grid-dnd.git"
   },
   "peerDependencies": {
     "react": "^16.8.6",
